feat: implementando repository de clientes

--- a/delivery-api/delivery-api/pom.xml
+++ b/delivery-api/delivery-api/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.deliverytech</groupId>
 	<artifactId>delivery-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>delivery-api</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -55,6 +56,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
