--- a/delivery-api/delivery-api/src/main/resources/application.properties
+++ b/delivery-api/delivery-api/src/main/resources/application.properties
@@ -25,3 +25,9 @@ spring.devtools.restart.enabled=true
 # Configurações específicas para JDK 21
 spring.jpa.open-in-view=false
 logging.level.org.springframework.web=DEBUG
+
+# Swagger Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
