feat: adc actuator

--- a/delivery-api/delivery-api/src/main/resources/application.properties
+++ b/delivery-api/delivery-api/src/main/resources/application.properties
@@ -31,3 +31,17 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
+
+# Segurança
+spring.security.user.name=admin
+spring.security.user.password=admin123
+
+# Expor todos os endpoints do Actuator
+management.endpoints.web.exposure.include=*
+
+# Mostrar detalhes do /actuator/health
+management.endpoint.health.show-details=always
+    
+# Nível de log da aplicação
+logging.level.root=INFO
+logging.level.com.deliverytech=DEBUG
