--- a/delivery-api/delivery-api/pom.xml
+++ b/delivery-api/delivery-api/pom.xml
@@ -116,6 +116,10 @@
             <artifactId>spring-data-redis</artifactId>
         </dependency>
 
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
