feat: adicionando métricas e log

--- a/delivery-api/delivery-api/src/main/resources/application.properties
+++ b/delivery-api/delivery-api/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.security.user.name=admin
 spring.security.user.password=admin123
 
 # Expor todos os endpoints do Actuator
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
 
 # Mostrar detalhes do /actuator/health
 management.endpoint.health.show-details=always
@@ -45,3 +45,4 @@ management.endpoint.health.show-details=always
 # Nível de log da aplicação
 logging.level.root=INFO
 logging.level.com.deliverytech=DEBUG
+
